# population-data-rs

./: Cargo.toml  README.md
data/: unsd-citypopulation-year-both.csv  unsd-citypopulation-year-fm.csv
src/: app.rs  lib.rs  main.rs
src/computing/: loader.rs  mod.rs  saver.rs  solve.rs
src/dao/: mod.rs
