[package]
name = "population_data_rs"
version = "0.1.0"
authors = ["meamuri <meammf@yandex.ru>"]

[dependencies]
csv = "1.0.0-beta.3"

bson = "0.9.0"
mongodb = "0.3.0"

rustc-serialize = "0.3.24"

serde = "1.0"
serde_derive = "1.0"

# serde_json is just for the example, not required in general
serde_json = "1.0"